- BZ-1166663: fixing completing tasks above 1000